@@ -9,7 +9,7 @@
 
   <groupId>de.monticore.lang.monticar</groupId>
   <artifactId>embedded-montiarc-emadl-generator</artifactId>
-  <version>0.3.8-SNAPSHOT</version>
+  <version>0.3.9-SNAPSHOT</version>
 
   <!-- == PROJECT DEPENDENCIES ============================================= -->
 
@@ -17,11 +17,11 @@
 
     <!-- .. SE-Libraries .................................................. -->
     <emadl.version>0.2.11-SNAPSHOT</emadl.version>
-    <CNNTrain.version>0.3.9-SNAPSHOT</CNNTrain.version>
-    <cnnarch-generator.version>0.0.5-SNAPSHOT</cnnarch-generator.version>
+    <CNNTrain.version>0.3.10-SNAPSHOT</CNNTrain.version>
+    <cnnarch-generator.version>0.0.6-SNAPSHOT</cnnarch-generator.version>
     <cnnarch-mxnet-generator.version>0.2.17-SNAPSHOT</cnnarch-mxnet-generator.version>
     <cnnarch-caffe2-generator.version>0.2.14-SNAPSHOT</cnnarch-caffe2-generator.version>
-    <cnnarch-gluon-generator.version>0.2.10-SNAPSHOT</cnnarch-gluon-generator.version>
+    <cnnarch-gluon-generator.version>0.2.11-SNAPSHOT</cnnarch-gluon-generator.version>
     <cnnarch-tensorflow-generator.version>0.1.0-SNAPSHOT</cnnarch-tensorflow-generator.version>
     <Common-MontiCar.version>0.0.19-SNAPSHOT</Common-MontiCar.version>
     <embedded-montiarc-math-opt-generator>0.1.6</embedded-montiarc-math-opt-generator>
@@ -94,7 +94,7 @@
             <artifactId>common-monticar</artifactId>
             <version>${Common-MontiCar.version}</version>
         </dependency>
-		
+
 		<dependency>
 			<groupId>de.monticore.lang.monticar</groupId>
             <artifactId>cnnarch-tensorflow-generator</artifactId>
@@ -246,12 +246,13 @@
           </execution>
         </executions>
       </plugin>
-	    <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
